// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Users should render when loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <div
      className="action-bar"
    >
      <div
        className="text"
      >
        <h4>
          Users
        </h4>
        <p>
          Manage users that can access the administrative panel
        </p>
      </div>
      <div
        className="spacer"
      />
      <button
        className="ui-action btn"
        onClick={[Function]}
      >
        + Register User
      </button>
    </div>
    <div
      className="row"
    >
      <Card
        cols={8}
      >
        <div
          className="content"
        >
          <Loader />
        </div>
      </Card>
    </div>
  </section>
</React.Fragment>
`;

exports[`(Component) Users should render when not loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <div
      className="action-bar"
    >
      <div
        className="text"
      >
        <h4>
          Users
        </h4>
        <p>
          Manage users that can access the administrative panel
        </p>
      </div>
      <div
        className="spacer"
      />
      <button
        className="ui-action btn"
        onClick={[Function]}
      >
        + Register User
      </button>
    </div>
    <div
      className="row"
    >
      <Card
        cols={8}
      >
        <div
          className="content"
        >
          <table
            className="responsive-table"
          >
            <thead>
              <tr>
                <th>
                  ID
                </th>
                <th>
                  Username
                </th>
                <th>
                  Actions
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                key="0"
              >
                <td
                  data-label="ID"
                >
                  1
                </td>
                <td
                  data-label="Username"
                >
                  admin
                </td>
                <td
                  data-label="Actions"
                >
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Change password
                  </button>
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Delete
                  </button>
                </td>
              </tr>
              <tr
                key="1"
              >
                <td
                  data-label="ID"
                >
                  2
                </td>
                <td
                  data-label="Username"
                >
                  joe
                </td>
                <td
                  data-label="Actions"
                >
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Change password
                  </button>
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Delete
                  </button>
                </td>
              </tr>
              <tr
                key="2"
              >
                <td
                  data-label="ID"
                >
                  3
                </td>
                <td
                  data-label="Username"
                >
                  marc
                </td>
                <td
                  data-label="Actions"
                >
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Change password
                  </button>
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Delete
                  </button>
                </td>
              </tr>
              <tr
                key="3"
              >
                <td
                  data-label="ID"
                >
                  4
                </td>
                <td
                  data-label="Username"
                >
                  gina
                </td>
                <td
                  data-label="Actions"
                >
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Change password
                  </button>
                  <button
                    className="ui-action btn"
                    onClick={[Function]}
                  >
                    Delete
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </Card>
    </div>
  </section>
</React.Fragment>
`;
